Alterações do menu

--- a/estilos/header.css
+++ b/estilos/header.css
@@ -12,6 +12,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    position: relative;
 }
 
 .container {
@@ -21,4 +22,19 @@
 
 .container_imagem {
     padding: 1em;
+}
+
+.lista_menu {
+    display: none;
+    position: absolute;
+    top: 100%;
+}
+
+.container_botao:checked~.lista_menu{
+    display: block;
+}
+
+.lista_menu_titulo,.lista_menu_item{
+    padding: 1em;
+    background-color: var(--branco) ;
 }
