--- a/estilos/header.css
+++ b/estilos/header.css
@@ -28,6 +28,7 @@
     display: none;
     position: absolute;
     top: 100%;
+    width: 60vw;
 }
 
 .container_botao:checked~.lista_menu{
@@ -37,4 +38,21 @@
 .lista_menu_titulo,.lista_menu_item{
     padding: 1em;
     background-color: var(--branco) ;
+
+}
+
+.lista_menu_titulo {
+    color: var(--laranja);
+    font-weight: 700;
+}
+
+.lista_menu_link {
+    background: var(--azul-degrade);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    text-transform: uppercase;
+}
+
+.container_botao {
+    display: none;
 }
