Adicionando carrossel e livros

--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,6 @@
 @import url(estilos/header.css);
 @import url(estilos/banner.css);
+@import url(estilos/carrossel.css);
 
 :root {
     --cor-de-fundo: #EBECEE;
