--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,9 @@
 @import url(estilos/header.css);
 @import url(estilos/banner.css);
 @import url(estilos/carrossel.css);
-
+@import url(estilos/topicos.css);
+@import url(estilos/contato.css);
+@import url(estilos/rodapé.css);
 :root {
     --cor-de-fundo: #EBECEE;
     --branco: #ffffff;
