--- a/estilos/carrossel.css
+++ b/estilos/carrossel.css
@@ -76,3 +76,29 @@
 .card_estrelas {
     margin: 0 0 0.5em;
 }
+
+@media screen and (min-width: 1024px) {
+    .carrossel_titulo{
+        font-size: 26px;
+    }
+
+    .swiper-pagination {
+        position:initial;
+        margin: 2em 0 3em 0;
+    }
+
+    .swiper {
+        width: 60%;
+    }
+
+    .swiper-button-prev,
+    .swiper-button-next {
+        display: block;
+        top: 60%;
+    }
+
+    .card {
+        width: 40%;
+        margin: 2em auto;
+    }
+}
