--- a/estilos/header.css
+++ b/estilos/header.css
@@ -56,3 +56,61 @@
 .container_botao {
     display: none;
 }
+
+.container_titulo {
+    display: none;
+}
+
+.opções {
+    display: none;
+}
+
+@media screen and (min-width: 1024px) {
+
+.container_titulo,
+.container_titulo-negrito {
+    font-family: var(--fonte-secundaria);
+    font-size: 30px;
+}
+
+.container_titulo {
+    font-weight: 400;
+    display: block;
+}
+
+.container_titulo-negrito {
+    font-weight: 700;
+}
+
+.opções{
+    display: flex;
+}
+
+.opções_item {
+    padding: 0 1em;
+    text-transform: uppercase;
+}
+
+.opções_link {
+    text-decoration: none;
+    color: --preto;
+}
+
+.container_imagem-transparente {
+    display: none;
+}
+
+.cabecalho_menu_hamburger {
+    display: none;
+}
+ 
+.opções_botão:checked~.lista_menu{
+    display: block;
+    width: auto;
+}
+
+.opções_botão {
+    display: none;
+}
+
+}
