--- a/estilos/topicos.css
+++ b/estilos/topicos.css
@@ -29,3 +29,13 @@
     font-weight: 700;
 
 }
+
+@media screen and (min-width: 1024px) {
+    .tópicos_titulo {
+        font-size: 24px;
+    }
+
+    .tópicos_link {
+        font-size: 24px;
+    }
+}
