--- a/estilos/header.css
+++ b/estilos/header.css
@@ -7,6 +7,14 @@
     display: inline-block;
 }
 
+.container_botão:checked~.container_rotulo > .cabecalho_menu_hamburger {
+    background-image: url("/img/menu_aberto.svg");
+}
+
+.container_botão:checked~.container_rotulo {
+    background: var(--azul-degrade);
+}
+
 .cabecalho {
     background-color: var(--branco);
     display: flex;
@@ -31,7 +39,7 @@
     width: 60vw;
 }
 
-.container_botao:checked~.lista_menu{
+.container_botão:checked~.lista_menu{
     display: block;
 }
 
@@ -53,7 +61,7 @@
     text-transform: uppercase;
 }
 
-.container_botao {
+.container_botão {
     display: none;
 }
 
@@ -65,52 +73,95 @@
     display: none;
 }
 
+.container_texto {
+    display: none;
+}
+
 @media screen and (min-width: 1024px) {
 
-.container_titulo,
-.container_titulo-negrito {
-    font-family: var(--fonte-secundaria);
-    font-size: 30px;
+    .container_titulo,
+    .container_titulo-negrito {
+        font-family: var(--fonte-secundaria);
+        font-size: 30px;
+    }
+
+    .container_titulo {
+        font-weight: 400;
+        display: block;
+    }
+
+    .container_titulo-negrito {
+        font-weight: 700;
+    }
+
+    .opções{
+        display: flex;
+    }
+
+    .opções_item {
+        padding: 0 1em;
+        text-transform: uppercase;
+    }
+
+    .opções_link {
+        text-decoration: none;
+        color: --preto;
+    }
+
+    .container_imagem-transparente {
+        display: none;
+    }
+
+    .cabecalho_menu_hamburger {
+        display: none;
+    }
+    
+    .opções_botão:checked~.lista_menu{
+        display: block;
+        width: auto;
+    }
+
+    .opções_botão {
+        display: none;
+    }
+
+    .opções_botão:checked~.opções_rotulo>.opções_item{
+        background:var(--azul-degrade);
+        color: var(--branco);
+    }
+
+    .opções_item{
+        padding: 2em 1em;
+    }
+
+    .lista_menu_item:hover{
+        background:var(--azul-degrade);
+    }
+
+    .lista_menu_item:hover > .lista_menu_link {
+        -webkit-text-fill-color: var(--branco);
+        text-decoration: none;
+    }
+
 }
 
-.container_titulo {
-    font-weight: 400;
-    display: block;
-}
+@media screen and (min-width: 1728px) {
+    .container_link {
+        display: flex;
+        align-items: center;
+        text-decoration: none;
+        color: var(--preto);
+    }
 
-.container_titulo-negrito {
-    font-weight: 700;
-}
+    .cabecalho {
+        padding: 0 2em;
+    }
 
-.opções{
-    display: flex;
-}
+    .opções {
+        margin-right: auto;
+    }
 
-.opções_item {
-    padding: 0 1em;
-    text-transform: uppercase;
-}
-
-.opções_link {
-    text-decoration: none;
-    color: --preto;
-}
-
-.container_imagem-transparente {
-    display: none;
-}
-
-.cabecalho_menu_hamburger {
-    display: none;
-}
- 
-.opções_botão:checked~.lista_menu{
-    display: block;
-    width: auto;
-}
-
-.opções_botão {
-    display: none;
-}
-
+    .container_texto {
+        display: block;
+    }
 }
